--- a/angular-front-end/package.json
+++ b/angular-front-end/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "@ng-bootstrap/ng-bootstrap": "^1.1.2",
+    "@types/bootstrap": "^4.1.0",
     "@types/googlemaps": "^3.30.8",
+    "@types/jquery": "^3.3.2",
     "angular-popper": "^1.0.0",
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
