--- a/angular-front-end/package.json
+++ b/angular-front-end/package.json
@@ -25,8 +25,10 @@
     "@types/bootstrap": "^4.1.0",
     "@types/googlemaps": "^3.30.8",
     "@types/jquery": "^3.3.2",
+    "angular-chart.js": "^1.1.1",
     "angular-popper": "^1.0.0",
     "bootstrap": "^4.1.0",
+    "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
     "ngx-bootstrap": "^2.0.4",
